@@ -1,3 +1,9 @@
+2007-02-14  J. Tang  <jtang@tresys.com>
+
+	* sesearch and apol now allow searching range transitions based
+	upon the target class.  (Target classes were introduced in version
+	21 policies.)
+
 2007-02-06  J. Tang  <jtang@tresys.com>
 
 	* Official release of SETools-3.1.
